@@ -51,9 +51,14 @@
 % POSSIBILITY OF SUCH DAMAGE.
 %%
 function dna = txtl_add_dna(tube, prom_spec, rbs_spec, gene_spec, dna_amount, type, varargin)
-mode = struct('add_dna_driver', {[]}, 'prot_deg_flag',{false}, 'no_protein_flag',{false}, 'prot_term_flag', ...
-    {false},'utr_attenuator_flag',{false},'utr_antisense_flag',{false},'utr_rbs_flag',{false}, ...
-    'prom_junk_flag',{false},'prom_thio_flag',{false});
+mode = struct('add_dna_driver', {[]},...
+              'prot_deg_flag',{false},...
+              'no_protein_flag',{false}, ...
+              'prot_term_flag',{false},...
+              'utr_attenuator_flag',{false},...
+              'utr_antisense_flag',{false},...
+              'utr_rbs_flag',{false}, ...
+              'prom_junk_flag',{false},'prom_thio_flag',{false});
 % Extract out the names and lengths
 [promData, promStr] = txtl_parsespec(prom_spec);
 [utrData, utrStr] = txtl_parsespec(rbs_spec);
@@ -258,20 +263,8 @@ elseif strcmp(varargin{1}, 'Setup Reactions')
     end
    
     % Add in mRNA degradation reactions
- 
+    txtl_mrna_degradation(mode, tube, dna, rna);
     
-    txtl_addreaction(tube,[rna.Name ' -> null'],...
-        'MassAction',{'TXTL_RNAdeg_F',tube.UserData.ReactionConfig.RNA_deg});
-    if mode.utr_attenuator_flag
-        txtl_addreaction(tube,['RNA att -> null'],...
-            'MassAction',{'TXTL_RNAdeg_F',tube.UserData.ReactionConfig.RNA_deg});
-    end
-    if mode.utr_rbs_flag
-        txtl_addreaction(tube,['AA:ATP:Ribo:' rna.Name ' -> AA + ATP + Ribo'],...
-            'MassAction',{'TXTL_RNAdeg_F',tube.UserData.ReactionConfig.RNA_deg});
-        txtl_addreaction(tube,['Ribo:' rna.Name ' -> Ribo'],...
-            'MassAction',{'TXTL_RNAdeg_F',tube.UserData.ReactionConfig.RNA_deg});
-    end
     % Protein degradation (if tagged)
     if mode.prot_deg_flag
         degradationRate = ...
